--- a/index.html
+++ b/index.html
@@ -19,25 +19,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            PLOTS
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="">Background</a>
-                            <a class="dropdown-item" href="">Data</a>
-                            <a class="dropdown-item" href="">Visualizations</a>
-                            <a class="dropdown-item" href="">Summary</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="visualizations.html">VISUALIZATIONS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">COMPARISON</a>
+                        <a class="nav-link" href="data.html">DATA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">DATA</a>
+                        <a class="nav-link" href="overview.html">OVERVIEW</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">REPO</a>
+                        <a class="nav-link" href="about.html">ABOUT US</a>
                     </li>
                 </ul>
             </div>
